# serializer version: 1
# name: test_print_diff_to_console_no_bundlemap
  '''
  Your stage is up-to-date with your local deploy root.
  
  '''
# ---
# name: test_print_diff_to_console_no_bundlemap.1
  '''
  Your stage is up-to-date with your local deploy root.
  
  '''
# ---
# name: test_print_diff_to_console_no_bundlemap.2
  '''
  Deleted paths to be removed from your stage:
    deleted:  deleted
    deleted:  dir/deleted
    deleted:  dir/only_on_stage
    deleted:  only_on_stage
  
  '''
# ---
# name: test_print_diff_to_console_no_bundlemap.3
  '''
  Local changes to be deployed:
    modified: different
    modified: dir/different
    modified: dir/modified
    modified: modified
  
  Deleted paths to be removed from your stage:
    deleted:  deleted
    deleted:  dir/deleted
    deleted:  dir/only_on_stage
    deleted:  only_on_stage
  
  '''
# ---
# name: test_print_diff_to_console_no_bundlemap.4
  '''
  Local changes to be deployed:
    added:    added
    modified: different
    added:    dir/added
    modified: dir/different
    modified: dir/modified
    added:    dir/new-file
    modified: modified
    added:    new-file
  
  Deleted paths to be removed from your stage:
    deleted:  deleted
    deleted:  dir/deleted
    deleted:  dir/only_on_stage
    deleted:  only_on_stage
  
  '''
# ---
# name: test_print_diff_to_console_no_bundlemap.5
  '''
  Local changes to be deployed:
    added:    added
    added:    dir/added
    added:    dir/new-file
    added:    new-file
  
  Deleted paths to be removed from your stage:
    deleted:  deleted
    deleted:  dir/deleted
    deleted:  dir/only_on_stage
    deleted:  only_on_stage
  
  '''
# ---
# name: test_print_diff_to_console_no_bundlemap.6
  '''
  Local changes to be deployed:
    added:    added
    added:    dir/added
    added:    dir/new-file
    added:    new-file
  
  '''
# ---
# name: test_print_diff_to_console_with_bundlemap
  '''
  Your stage is up-to-date with your local deploy root.
  
  '''
# ---
# name: test_print_diff_to_console_with_bundlemap.1
  '''
  Your stage is up-to-date with your local deploy root.
  
  '''
# ---
# name: test_print_diff_to_console_with_bundlemap.2
  '''
  Deleted paths to be removed from your stage:
    deleted:  deleted
    deleted:  dir/deleted
    deleted:  dir/only_on_stage
    deleted:  only_on_stage
  
  '''
# ---
# name: test_print_diff_to_console_with_bundlemap.3
  '''
  Local changes to be deployed:
    modified: ? -> different
    modified: ? -> dir/different
    modified: ? -> dir/modified
    modified: ? -> modified
  
  Deleted paths to be removed from your stage:
    deleted:  deleted
    deleted:  dir/deleted
    deleted:  dir/only_on_stage
    deleted:  only_on_stage
  
  '''
# ---
# name: test_print_diff_to_console_with_bundlemap.4
  '''
  Local changes to be deployed:
    modified: src/different -> different
    modified: src/dir/different -> dir/different
    modified: src/dir/modified -> dir/modified
    modified: src/modified -> modified
  
  Deleted paths to be removed from your stage:
    deleted:  deleted
    deleted:  dir/deleted
    deleted:  dir/only_on_stage
    deleted:  only_on_stage
  
  '''
# ---
# name: test_print_diff_to_console_with_bundlemap.5
  '''
  Local changes to be deployed:
    added:    ? -> added
    added:    ? -> dir/added
    added:    ? -> dir/new-file
    added:    ? -> new-file
    modified: src/different -> different
    modified: src/dir/different -> dir/different
    modified: src/dir/modified -> dir/modified
    modified: src/modified -> modified
  
  Deleted paths to be removed from your stage:
    deleted:  deleted
    deleted:  dir/deleted
    deleted:  dir/only_on_stage
    deleted:  only_on_stage
  
  '''
# ---
# name: test_print_diff_to_console_with_bundlemap.6
  '''
  Local changes to be deployed:
    added:    src/added -> added
    modified: src/different -> different
    added:    src/dir/added -> dir/added
    modified: src/dir/different -> dir/different
    modified: src/dir/modified -> dir/modified
    added:    src/dir/new-file -> dir/new-file
    modified: src/modified -> modified
    added:    src/new-file -> new-file
  
  Deleted paths to be removed from your stage:
    deleted:  deleted
    deleted:  dir/deleted
    deleted:  dir/only_on_stage
    deleted:  only_on_stage
  
  '''
# ---
# name: test_print_diff_to_console_with_bundlemap.7
  '''
  Local changes to be deployed:
    added:    src/added -> added
    added:    src/dir/added -> dir/added
    added:    src/dir/new-file -> dir/new-file
    added:    src/new-file -> new-file
  
  Deleted paths to be removed from your stage:
    deleted:  deleted
    deleted:  dir/deleted
    deleted:  dir/only_on_stage
    deleted:  only_on_stage
  
  '''
# ---
# name: test_print_diff_to_console_with_bundlemap.8
  '''
  Local changes to be deployed:
    added:    src/added -> added
    added:    src/dir/added -> dir/added
    added:    src/dir/new-file -> dir/new-file
    added:    src/new-file -> new-file
  
  '''
# ---
